compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_as_expr_bare.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "function key : int end key\nvar res := key\n"

---
"key"@(FileId(1), 9..12) [Declared]: function -> int
"res"@(FileId(1), 31..34) [Declared]: int
"<root>"@(dummy) [Declared]: <error>

