compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_as_expr_err.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "procedure lime() end lime\nvar res := lime()\n"

---
"lime"@(FileId(1), 10..14) [Declared]: procedure ( ) -> void
"<unnamed>"@(dummy) [Declared]: <error>
"res"@(FileId(1), 30..33) [Declared]: <error>
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 37..41: cannot call procedure here
| error in file FileId(1) for 37..41: procedure calls cannot be used as expressions
