compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_as_stmt.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "function key() : int end key\nprocedure lime() end lime\nkey() lime()\n"
---
"key"@(FileId(1), 9..12) [Declared]: function ( ) -> int
"<unnamed>"@(dummy) [Undeclared]: <error>
"lime"@(FileId(1), 39..43) [Declared]: procedure ( ) -> void
"<unnamed>"@(dummy) [Undeclared]: <error>
"<root>"@(dummy) [Declared]: <error>

