compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_coerce_ref_arg_char_any.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "procedure p(var a : char(*)) end p\nvar c : char\nvar cs : char(6)\np(c) p(cs)\n"
---
"p"@(FileId(1), 10..11) [Subprogram(Procedure)]: procedure ( pass(var ref) char_n Any, ) -> void
"<unnamed>"@(dummy) [Undeclared]: <error>
"a"@(FileId(1), 16..17) [Param(Reference(Var), No)]: char_n Any
"c"@(FileId(1), 39..40) [ConstVar(Var, No)]: char
"cs"@(FileId(1), 52..54) [ConstVar(Var, No)]: char_n Fixed(Unevaluated(LibraryId(0), BodyId(1)))
"<root>"@(dummy) [Module(No)]: <error>

