compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_coerce_ref_arg_char_any_err.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "procedure p(var a : char(*)) end p\nvar c : string\np(c)\n"
---
"p"@(FileId(1), 10..11) [Subprogram(Procedure)]: procedure ( pass(var ref) char_n Any, ) -> void
"<unnamed>"@(dummy) [Undeclared]: <error>
"a"@(FileId(1), 16..17) [Param(Reference(Var), No)]: char_n Any
"c"@(FileId(1), 39..40) [ConstVar(Var, No)]: string
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 52..53: mismatched types
| note in file FileId(1) for 52..53: this is of type `string`
| note in file FileId(1) for 52..53: parameter expects type `char(*)`
| info: `string` is not equivalent to `char(*)`
