compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_coerce_ref_arg_cheated.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "procedure p(var a : cheat real) end p\nvar i : int\np(i)\n"
---
"p"@(FileId(1), 10..11) [Declared]: procedure ( pass(var ref) cheat real, ) -> void
"<unnamed>"@(dummy) [Undeclared]: <error>
"a"@(FileId(1), 16..17) [Declared]: real
"i"@(FileId(1), 42..43) [Declared]: int
"<root>"@(dummy) [Declared]: <error>

