compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_coerce_ref_arg_err.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "procedure p(var a : real) end p\nvar i : int\np(i)\n"
---
"p"@(FileId(1), 10..11) [Subprogram(Procedure)]: procedure ( pass(var ref) real, ) -> void
"<unnamed>"@(dummy) [Undeclared]: <error>
"a"@(FileId(1), 16..17) [Param(Reference(Var), No)]: real
"i"@(FileId(1), 36..37) [ConstVar(Var, No)]: int
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 46..47: mismatched types
| note in file FileId(1) for 46..47: this is of type `int`
| note in file FileId(1) for 46..47: parameter expects type `real`
| info: `int` is not equivalent to `real`
