compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_coerce_ref_arg_string_any.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "procedure p(var a : string(*)) end p\nvar c : string\np(c)\n"

---
"p"@(FileId(1), 10..11) [Declared]: procedure ( pass(var ref) string_n Any, ) -> void
"<unnamed>"@(dummy) [Declared]: <error>
"a"@(FileId(1), 16..17) [Declared]: string_n Any
"c"@(FileId(1), 41..42) [Declared]: string
"<root>"@(dummy) [Declared]: <error>

