compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_coerce_value_arg.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "procedure p(a : real) end p\nvar i : int\np(i)\n"
---
"p"@(FileId(1), 10..11) [Subprogram(Procedure)]: procedure ( pass(value) real, ) -> void
"a"@(FileId(1), 12..13) [Param(Value, No)]: real
"i"@(FileId(1), 32..33) [ConstVar(Var, No)]: int
"<root>"@(dummy) [Module(No)]: <error>

